tools/tests/errors/matrix_unequal_rows.experr
rows must have equal length
